<resources>
    <string name="app_name">Balligh</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyDTIvPOsKEL7z6wBmQak9ggvVcvwaWUmVQ</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_kirim">Kirim</string>

    <string name="et_nama_lengkap">Nama Lengkap</string>
    <string name="et_email">Email</string>
    <string name="et_nomor_hp">Nomor HP</string>
    <string name="et_password">Password</string>
    <string name="et_konfirm_password">Konfirmasi Password</string>
    <string name="et_alamat2">Alamat Lengkap</string>
    <string name="et_alamat">Tulis Alamat Lengkap</string>
    <string name="et_kecamatan">Kecamatan</string>
    <string name="et_kota">Kabupaten/Kota</string>
    <string name="et_provinsi">Provinsi</string>
    <string name="et_format_tanggal">dd/mm/yyyy</string>
    <string name="et_tanggal_lahir">Tanggal Lahir</string>
    <string name="et_tempat_lahir">Tempat Lahir</string>
    <string name="et_jk_laki">Laki-Laki</string>
    <string name="et_jk_perempuan">Perempuan</string>
    <string name="et_jk">Jenis Kelamin</string>

    <string name="et_nama_masjid">Nama Masjid</string>
    <string name="et_masjid">Masjid</string>
    <string name="et_desc_masjid">Deskripsi Masjid</string>

    <string name="et_nama_lembaga">Nama Lembaga Dakwah</string>
    <string name="et_nama_pengurus">Nama Pengurus</string>
    <string name="et_pengurus">Pengurus</string>
    <string name="et_desc">Deskripsi</string>
    <string name="et_desc_lembaga">Deskripsi Lembaga Dakwah</string>
    <string name="et_foto_pengurus">Photo Pengurus</string>

    <string name="et_nama_perguruan">Nama Perguruan Tinggi</string>
    <string name="et_nama_pt">Nama PT</string>
    <string name="et_kota_perguruan">Kota PT</string>
    <string name="et_tahun_perguruan">Tahun Tamat</string>
    <string name="et_tahun_pt">Tahun</string>
    <string name="et_jurusan_perguruan">Jurusan</string>
    <string name="et_gelar_pt">Gelar Akademik</string>
    <string name="et_gelar_s1">S.Ag.</string>
    <string name="et_gelar_s2">M.Ag.</string>
    <string name="et_gelar_s3">Dr.</string>

    <string name="et_alamat_muballigh">Alamat Muballigh</string>
    <string name="et_alamat_lembaga">Alamat Lembaga Dakwah</string>

    <string name="text_pendidikan1">Pendidikan  S1</string>
    <string name="text_pendidikan2">Pendidikan  S2</string>
    <string name="text_pendidikan3">Pendidikan  S3</string>

    <string name="text_pick_kualifikasi">Pilih Kualifikasi Keilmuan</string>
    <string name="text_pick_tabligh">Pilih Kesediaan Tabligh</string>
    <string name="text_keilmuan">Keilmuan</string>
    <string name="text_tabligh">Tabligh</string>
    <string name="text_jadwal1">STATUS JADWAL 2019</string>
    <string name="text_kutbah_jumat">Khutbah Jumat</string>
    <string name="text_ceramah_tarwih">Ceramah Tarwih</string>
    <string name="text_pengurus">Pengurus</string>

    <string name="text_jumlah_tarwih">29</string>
    <string name="text_jumlah_khutbah">52</string>

    <string name="text_verifikasi">Silahkan verifikasi email anda dan klik link yang ada</string>

    <string name="text_maintenance">Mohon Maaf, aplikasi sedang maintenance</string>
    <string name="text_all_right_reserved">Balligh | All Right Reserved 2019</string>
    <string name="text_landing_welcome">Selamat Datang</string>
    <string name="text_jenis_akun">Piih jenis akun yang akan dibuat</string>
    <string name="text_sudah_punya_akun">Sudah punya akun?</string>
    <string name="text_belum_punya_akun">Belum punya akun?</string>
    <string name="text_sign_in">Sign in!</string>
    <string name="text_sign_up">Sign up!</string>
    <string name="text_forget_pass">Lupa Password?</string>
    <string name="text_reset_pass">Recover Password</string>
    <string name="text_reset_password">Silahkan Masukkan Nomor HP anda dan kami akan mengirimkan kode recovery</string>
    <string name="text_profil_muballigh">Profil Muballigh</string>
    <string name="text_profil_lembaga">Profil Lembaga Dakwah</string>
    <string name="text_profil_pengurus">Profil Masjid</string>

    <string name="text_frag_lembaga">Profil Lembaga</string>
    <string name="text_frag_masjid">Afiliasi Masjid</string>
    <string name="text_frag_muballigh">Afiliasi Muballigh</string>

    <string name="text_frag_biodata">Biodata</string>
    <string name="text_frag_pendidikan">Pendidikan</string>
    <string name="text_frag_afiliasi">Afiliasi Lembaga</string>
    <string name="text_frag_kualifikasi">Kualifikasi</string>

    <string name="text_kualifikasi_ilmu">Kualifikasi Keilmuan</string>
    <string name="text_kualifikasi_tabligh">Kesediaan Tabligh</string>
    <string name="text_switch_akun">Ganti Akun</string>

    <string name="error_foto_kosong">Anda belum mengupload Foto</string>
    <string name="error_latitude_kosong">Anda belum memilih lokasi di map!</string>
    <string name="error_data_kosong">Data tidak boleh kosong!</string>
    <string name="error_pass_not_same">Password tidak sesuai!</string>
    <string name="error_nomor_tidak_cukup">Jumlah Nomor tidak Valid!</string>
    <string name="error_nomor_terdaftar">Nomor telepon sudah terdaftar </string>
    <string name="error_email_terdaftar">Email sudah terdaftar </string>
    <string name="error">Error </string>
    <string name="error_fitur_not_ready">Mohon maaf, fitur ini belum tersedia </string>
    <string name="error_unknown">Mohon maaf, terjadi error yang tidak diketahui </string>
    <string name="error_phone_not_found">Mohon maaf, nomor belum terdaftar </string>
    <string name="error_update">Gagal Mengambil Data Terbaru </string>
    <string name="error_send">Gagal Mengirim Data </string>
    <string name="error_jk_not_found">Mohon pilih salah satu Jenis Kelamin</string>
    <string name="error_prov_not_found">Mohon pilih salah satu Provinsi yang Tersedia</string>
    <string name="error_kota_not_found">Mohon pilih salah satu Kota/Kabupaten yang Tersedia</string>

    <string name="toast_success_register">Berhasil Registrasi</string>
    <string name="toast_success_login">Berhasil Login</string>
    <string name="toast_lengkapi_profile">Afwan, anda harus melengkapi profil terlebih dulu</string>

    <string name="jenis_akun_1">Lembaga Dakwah</string>
    <string name="jenis_akun_2">Pengurus Masjid</string>
    <string name="jenis_akun_3">Muballigh</string>
    <string name="jenis_akun_4">Masyarakat</string>
    <string name="jenis_akun_sama">Anda sudah berada di jenis akun ini</string>
    <string name="succes_swithc">Berhasil Ganti Akun</string>


    <string name="progress_title1">Mohon Tunggu...</string>
    <string name="progress_text1">Proses</string>

    <string name="btn_update">Update</string>

    <string name="digit_nama">asdfghjklqwertyuiopzxcvbnmZXCVBNMASDFGHJKLQWERTYUIOP1234567890_ .,</string>
    <string name="digit_email">asdfghjklqwertyuiopzxcvbnmZXCVBNMASDFGHJKLQWERTYUIOP1234567890_@.-</string>
</resources>
