<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exomatik.balligh.balligh.Activity.Authentication.ActResetPassword"
    android:background="@drawable/background_blue_full"
    android:paddingLeft="@dimen/margin_big"
    android:paddingRight="@dimen/margin_big"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="@dimen/width120"
            android:layout_height="@dimen/width120"
            android:src="@drawable/logo_balligh_white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/width90"
            android:id="@+id/img_logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_logo"
            android:text="@string/text_reset_pass"
            android:textSize="@dimen/text_standard_big"
            android:textColor="@color/putihBiru"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="@dimen/margin_big"
            android:id="@+id/text_recover"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_reset_password"
            android:textAlignment="center"
            android:textColor="@color/putihAsli"
            android:textSize="@dimen/text_small"
            android:fontFamily="@font/helvetica_neue"
            android:layout_below="@+id/text_recover"
            android:layout_marginTop="@dimen/margin_big"
            android:id="@+id/text_recover2"
            />

        <EditText
            android:id="@+id/et_nomor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width60"
            android:layout_below="@+id/text_recover2"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@drawable/border_transparent"
            android:hint="@string/et_nomor_hp"
            android:paddingLeft="@dimen/margin_big"
            android:paddingRight="@dimen/margin_big"
            android:textColor="@color/putihAsli"
            android:inputType="number"
            android:textColorHint="@color/putihAsli"
            android:textSize="@dimen/text_standard_et"
            />
        <Button
            android:layout_width="@dimen/width_max"
            android:layout_height="@dimen/height_standard"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_kirim"
            android:textColor="@color/putihBiruGelap"
            android:textSize="@dimen/text_standard"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:id="@+id/btn_kirim"
            android:layout_below="@+id/et_nomor"
            android:background="@drawable/border_round_full_yellow"
            android:layout_marginTop="@dimen/width60"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_kirim"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/width40"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/text_belum_punya_akun"
                android:textColor="@color/putihAsli"
                android:textSize="@dimen/text_standard_et" />

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sign_up"
                android:textColor="@color/blueAqua"
                android:textSize="@dimen/text_standard_et"
                />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
