<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exomatik.balligh.balligh.Activity.ActLanding"
    android:background="@drawable/background_blue_full"
    >
    <ImageView
        android:layout_width="@dimen/lebar_logo"
        android:layout_height="@dimen/lebar_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/width100"
        android:src="@drawable/logo_balligh"
        android:id="@+id/img_logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/putihAsli"
        android:textSize="@dimen/text_super_large"
        android:fontFamily="@font/eras_itc"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_logo"
        android:id="@+id/text_logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_logo"
        android:text="@string/text_landing_welcome"
        android:textColor="@color/putihBiru"
        android:textSize="@dimen/text_standard_big"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="@dimen/width60"
        android:id="@+id/text_welcome"
        />
    <Button
        android:layout_width="@dimen/width_max"
        android:layout_height="@dimen/height_standard"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_welcome"
        android:text="@string/btn_sign_in"
        android:textColor="@color/putihBiruGelap"
        android:textSize="@dimen/text_standard"
        android:textStyle="bold"
        android:background="@drawable/border_round_full_white"
        android:id="@+id/btn_sign_in"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="@dimen/margin_big_standard"
        />
    <Button
        android:layout_width="@dimen/width_max"
        android:layout_height="@dimen/height_standard"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_sign_up"
        android:textColor="@color/putihBiruGelap"
        android:textSize="@dimen/text_standard"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"
        android:textAllCaps="false"
        android:id="@+id/btn_sign_up"
        android:layout_below="@+id/btn_sign_in"
        android:background="@drawable/border_round_full_yellow"
        android:layout_marginTop="@dimen/margin_big"
        />
</RelativeLayout>