<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putihAsli">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mb_header_big"
        android:elevation="@dimen/margin_small"
        >

        <ImageView
            android:layout_width="@dimen/width90"
            android:layout_height="@dimen/width115"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/width40"
            android:src="@drawable/logo_without_white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header"
        android:layout_marginTop="@dimen/margin_mines_standard">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width240"
        android:layout_alignParentBottom="true"
        android:background="@drawable/mb_footer_big"
        android:paddingBottom="@dimen/margin_standard"
        android:paddingLeft="@dimen/width30"
        android:paddingRight="@dimen/width30"
        android:elevation="@dimen/margin_small"
        >

        <TextView
            android:id="@+id/text_jadwal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/width80"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/text_jadwal1"
            android:textColor="@color/putihGelap3"
            android:textSize="@dimen/text_standard_et"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_garis"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_very_small"
            android:layout_below="@+id/text_jadwal"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/hitamAsli"
            android:src="@color/putihAsli" />

        <TextView
            android:id="@+id/text_khutbah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_garis"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/putihAsli"
            android:textSize="@dimen/text_standard_et" />

        <com.xw.repo.BubbleSeekBar
            android:id="@+id/seek_bar1"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_below="@+id/text_khutbah"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/text_jumlah_khutbah"
            app:bsb_hide_bubble="true"
            app:bsb_second_track_color="@color/putihBiru"
            app:bsb_touch_to_seek="true"
            app:bsb_track_color="@color/putihBiruGelap2" />

        <TextView
            android:id="@+id/text_jumlah_khutbah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_khutbah"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/text_jumlah_khutbah"
            android:textColor="@color/putihAsli"
            android:textSize="@dimen/text_standard" />

        <TextView
            android:id="@+id/text_ceramah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seek_bar1"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/putihAsli"
            android:textSize="@dimen/text_standard_et" />

        <com.xw.repo.BubbleSeekBar
            android:id="@+id/seek_bar2"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_below="@+id/text_ceramah"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/text_jumlah_ceramah"
            app:bsb_hide_bubble="true"
            app:bsb_second_track_color="@color/putihBiru"
            app:bsb_touch_to_seek="true"
            app:bsb_track_color="@color/putihBiruGelap2" />

        <TextView
            android:id="@+id/text_jumlah_ceramah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_ceramah"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/text_jumlah_tarwih"
            android:textColor="@color/putihAsli"
            android:textSize="@dimen/text_standard" />
    </RelativeLayout>
</RelativeLayout>